[gd_scene load_steps=10 format=3 uid="uid://dwd8oumg2h068"]

[ext_resource type="Script" uid="uid://sqgg5ypyhi4" path="res://Scripts/news_template.gd" id="1_bqfwx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncod0"]
bg_color = Color(0.12941177, 0.16078432, 0.24313726, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jinfa"]
bg_color = Color(0.92156863, 0.9098039, 0.8980392, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nckt"]
content_margin_left = 20.0
bg_color = Color(0.90534997, 0.55898935, 0.49497223, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0xi0"]
content_margin_left = 20.0
bg_color = Color(0.5575112, 0.24418923, 0.18900546, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqfwx"]
content_margin_left = 20.0
bg_color = Color(0.91764706, 0.9098039, 0.8980392, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1w0cw"]
content_margin_left = 20.0
bg_color = Color(0.8275309, 0.4144279, 0.34451237, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_0nckt"]
Button/colors/font_color = Color(0.078431375, 0.11372549, 0.14509805, 1)
Button/colors/font_focus_color = Color(0.08235294, 0.11764706, 0.14901961, 1)
Button/colors/font_hover_pressed_color = Color(0.9843137, 0.9843137, 0.9843137, 1)
Button/colors/font_pressed_color = Color(0.9843137, 0.9843137, 0.9843137, 1)
Button/styles/hover = SubResource("StyleBoxFlat_0nckt")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_a0xi0")
Button/styles/normal = SubResource("StyleBoxFlat_bqfwx")
Button/styles/pressed = SubResource("StyleBoxFlat_1w0cw")

[sub_resource type="CanvasTexture" id="CanvasTexture_1w0cw"]

[node name="NewsTemplate" type="Panel"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -422.5
offset_right = 826.0
offset_bottom = 422.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ncod0")
script = ExtResource("1_bqfwx")

[node name="Article" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -378.0
offset_top = 80.0
offset_right = 378.0
offset_bottom = 819.5
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jinfa")

[node name="Line2D" type="Line2D" parent="Article"]
position = Vector2(-22, -41)
points = PackedVector2Array(46, 155.5, 744, 155.5)
width = 2.0
default_color = Color(0.6156863, 0.5882353, 0.54901963, 1)

[node name="Headline" type="Button" parent="Article"]
layout_mode = 0
offset_left = 3.0
offset_top = 11.5
offset_right = 749.0
offset_bottom = 68.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 25
toggle_mode = true
text = "Headline"
alignment = 0
autowrap_mode = 2

[node name="Publisher" type="Button" parent="Article"]
layout_mode = 0
offset_left = 7.0
offset_top = 120.5
offset_right = 175.0
offset_bottom = 155.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Publisher
"
alignment = 0

[node name="Date" type="Button" parent="Article"]
layout_mode = 0
offset_left = 587.0
offset_top = 121.5
offset_right = 719.0
offset_bottom = 156.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Date
"
alignment = 2

[node name="Author" type="Button" parent="Article"]
layout_mode = 0
offset_left = 7.0
offset_top = 155.5
offset_right = 175.0
offset_bottom = 190.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Author
"
alignment = 0

[node name="Text" type="Button" parent="Article"]
layout_mode = 0
offset_left = 2.0
offset_top = 544.5
offset_right = 753.0
offset_bottom = 579.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 15
toggle_mode = true
text = "Text
"
alignment = 0
autowrap_mode = 2

[node name="ImageButton" type="Button" parent="Article"]
layout_mode = 0
offset_left = 11.0
offset_top = 186.5
offset_right = 733.0
offset_bottom = 546.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 26
toggle_mode = true
text = "
"
alignment = 0

[node name="Image" type="Sprite2D" parent="Article/ImageButton"]
position = Vector2(360.5, 177.5)
scale = Vector2(699, 341)
texture = SubResource("CanvasTexture_1w0cw")

[node name="Link" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 18.5
offset_right = 777.0
offset_bottom = 61.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 15
toggle_mode = true
text = "Link"
alignment = 0

[node name="Report" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 427.0
offset_top = -27.5
offset_right = 1275.0
offset_bottom = 873.5
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jinfa")

[node name="ReportText" type="RichTextLabel" parent="Report"]
layout_mode = 0
offset_left = 29.0
offset_top = 36.0
offset_right = 806.0
offset_bottom = 887.0
theme_override_colors/default_color = Color(0.101960786, 0.13725491, 0.16470589, 1)
theme_override_font_sizes/normal_font_size = 20
text = "CAREFULL"

[connection signal="toggled" from="Article/Headline" to="." method="_on_headline_toggled"]
[connection signal="toggled" from="Article/Publisher" to="." method="_on_publisher_toggled"]
[connection signal="toggled" from="Article/Date" to="." method="_on_date_toggled"]
[connection signal="toggled" from="Article/Author" to="." method="_on_author_toggled"]
[connection signal="toggled" from="Article/Text" to="." method="_on_text_toggled"]
[connection signal="toggled" from="Article/ImageButton" to="." method="_on_image_button_toggled"]
[connection signal="toggled" from="Link" to="." method="_on_link_toggled"]
